[gd_scene load_steps=18 format=3 uid="uid://onq0e03n2eh2"]

[ext_resource type="Script" uid="uid://d2l6ng1socfrq" path="res://Scripts/cave_default.gd" id="1_rcyi4"]
[ext_resource type="Texture2D" uid="uid://bwdqweseprb3j" path="res://Assets/Art/Falling-1.png" id="2_pklks"]
[ext_resource type="FontFile" uid="uid://q1kfaq4hjaog" path="res://Assets/Fonts/ThaleahFat.ttf" id="2_urmdh"]
[ext_resource type="Texture2D" uid="uid://bnl68tifbjgnn" path="res://Assets/Art/Cave Scene.png" id="2_y8311"]
[ext_resource type="Texture2D" uid="uid://77g20unf22t4" path="res://Assets/Art/Falling-2.png" id="3_0clby"]
[ext_resource type="AudioStream" uid="uid://c1vbenfvou76e" path="res://Assets/Music/BatSound.mp3" id="3_rcyi4"]
[ext_resource type="Texture2D" uid="uid://6kp3u04fm41g" path="res://Assets/Art/HighlightedCave.png" id="4_330b6"]
[ext_resource type="Texture2D" uid="uid://bqx74aqqjqsiw" path="res://Assets/Art/WarningBackground.png" id="7_gduwp"]
[ext_resource type="Texture2D" uid="uid://cplxe8h5qqt1u" path="res://Assets/Art/HazardIcon.png" id="8_kxcv4"]
[ext_resource type="PackedScene" uid="uid://dvgkmf2d4sfdv" path="res://Scenes/bat.tscn" id="9_kxcv4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_twc2g"]
size = Vector2(22.3485, 20)

[sub_resource type="LabelSettings" id="LabelSettings_y8311"]
font = ExtResource("2_urmdh")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_2tao4"]
font = ExtResource("2_urmdh")
font_size = 130

[sub_resource type="LabelSettings" id="LabelSettings_0clby"]
font = ExtResource("2_urmdh")
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_rcyi4"]
font = ExtResource("2_urmdh")
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_pklks"]
font = ExtResource("2_urmdh")
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_330b6"]
font = ExtResource("2_urmdh")
font_size = 40

[node name="CaveDefault" type="Node2D"]
script = ExtResource("1_rcyi4")

[node name="CaveBackdrop" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_y8311")

[node name="0" type="Area2D" parent="."]
position = Vector2(256, 498)
scale = Vector2(5.28, 5.08)

[node name="CollisionShape2D" type="CollisionShape2D" parent="0"]
shape = SubResource("RectangleShape2D_twc2g")

[node name="CaveNumber" type="Label" parent="0"]
texture_filter = 1
offset_left = -10.606
offset_top = -65.0
offset_right = 13.394
offset_bottom = -42.0
text = "2"
label_settings = SubResource("LabelSettings_y8311")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighlightedCave" type="Sprite2D" parent="0"]
visible = false
position = Vector2(60.6061, -35.8268)
scale = Vector2(0.189394, 0.19685)
texture = ExtResource("4_330b6")

[node name="1" type="Area2D" parent="."]
position = Vector2(571, 498)
scale = Vector2(5.28, 5.08)

[node name="CollisionShape2D" type="CollisionShape2D" parent="1"]
shape = SubResource("RectangleShape2D_twc2g")

[node name="CaveNumber" type="Label" parent="1"]
texture_filter = 1
offset_left = -12.121
offset_top = -65.0
offset_right = 11.879
offset_bottom = -42.0
text = "6"
label_settings = SubResource("LabelSettings_y8311")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighlightedCave" type="Sprite2D" parent="1"]
visible = false
position = Vector2(60.6061, -37.0079)
scale = Vector2(0.189394, 0.193205)
texture = ExtResource("4_330b6")

[node name="2" type="Area2D" parent="."]
position = Vector2(887, 497)
scale = Vector2(5.28, 5.08)

[node name="CollisionShape2D" type="CollisionShape2D" parent="2"]
position = Vector2(-0.56818, -0.590552)
shape = SubResource("RectangleShape2D_twc2g")

[node name="CaveNumber" type="Label" parent="2"]
texture_filter = 1
offset_left = -13.258
offset_top = -65.0
offset_right = 10.742
offset_bottom = -42.0
text = "7"
label_settings = SubResource("LabelSettings_y8311")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighlightedCave" type="Sprite2D" parent="2"]
visible = false
position = Vector2(60.0379, -35.6299)
scale = Vector2(0.189394, 0.19685)
texture = ExtResource("4_330b6")

[node name="CaveNumber" type="Label" parent="."]
offset_left = 22.0
offset_top = 16.0
offset_right = 87.0
offset_bottom = 136.0
text = "1"
label_settings = SubResource("LabelSettings_2tao4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentCave" type="Label" parent="CaveNumber"]
layout_mode = 0
offset_left = -9.0
offset_top = -1.0
offset_right = 123.0
offset_bottom = 22.0
text = "Current Cave"
label_settings = SubResource("LabelSettings_0clby")

[node name="EnterCave" type="Label" parent="."]
texture_filter = 1
offset_left = 381.0
offset_top = 580.0
offset_right = 773.0
offset_bottom = 613.0
text = "Press 'E' to enter cave 25"
label_settings = SubResource("LabelSettings_rcyi4")

[node name="ShootCave" type="Label" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 287.0
offset_top = 610.0
offset_right = 891.0
offset_bottom = 643.0
grow_horizontal = 2
grow_vertical = 2
text = "Press 'Q' to shoot an arrow into cave 25"
label_settings = SubResource("LabelSettings_rcyi4")

[node name="ShootCaveResult" type="Label" parent="."]
visible = false
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 524.0
offset_top = 598.0
offset_right = 627.0
offset_bottom = 631.0
grow_horizontal = 2
grow_vertical = 2
text = "RESULT"
label_settings = SubResource("LabelSettings_rcyi4")

[node name="BatSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rcyi4")

[node name="Falling-2" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
texture = ExtResource("3_0clby")

[node name="Falling-1" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
texture = ExtResource("2_pklks")

[node name="Info" type="Label" parent="."]
offset_left = 352.0
offset_top = 66.0
offset_right = 804.0
offset_bottom = 89.0
theme_override_fonts/font = ExtResource("2_urmdh")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="Warnings" type="Node2D" parent="."]

[node name="PitBackground" type="Sprite2D" parent="Warnings"]
position = Vector2(279, 120)
scale = Vector2(0.304, 0.218)
texture = ExtResource("7_gduwp")

[node name="PitWarning" type="Label" parent="Warnings/PitBackground"]
offset_left = -155.0
offset_top = -100.0
offset_right = 355.0
offset_bottom = 71.0
scale = Vector2(1, 1.2)
text = "You feel a draft"
label_settings = SubResource("LabelSettings_pklks")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HazardIcon" type="Sprite2D" parent="Warnings/PitBackground"]
texture_filter = 1
position = Vector2(-273.026, -4.58716)
scale = Vector2(0.559211, 0.779817)
texture = ExtResource("8_kxcv4")

[node name="WumpusBackground" type="Sprite2D" parent="Warnings"]
position = Vector2(570, 120)
scale = Vector2(0.304, 0.218)
texture = ExtResource("7_gduwp")

[node name="WumpusWarning" type="Label" parent="Warnings/WumpusBackground"]
offset_left = -171.0
offset_top = -100.0
offset_right = 359.0
offset_bottom = 67.0
scale = Vector2(1, 1.2)
text = "You smell a Wumpus"
label_settings = SubResource("LabelSettings_pklks")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HazardIcon" type="Sprite2D" parent="Warnings/WumpusBackground"]
texture_filter = 1
position = Vector2(-273.026, -4.58716)
scale = Vector2(0.559211, 0.779817)
texture = ExtResource("8_kxcv4")

[node name="BatBackground" type="Sprite2D" parent="Warnings"]
position = Vector2(858, 120)
scale = Vector2(0.304, 0.218)
texture = ExtResource("7_gduwp")

[node name="BatWarning" type="Label" parent="Warnings/BatBackground"]
offset_left = -171.0
offset_top = -100.0
offset_right = 352.0
offset_bottom = 64.0
scale = Vector2(1, 1.2)
text = "You hear bats near you"
label_settings = SubResource("LabelSettings_pklks")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HazardIcon" type="Sprite2D" parent="Warnings/BatBackground"]
texture_filter = 1
position = Vector2(-273.026, -4.58716)
scale = Vector2(0.559211, 0.779817)
texture = ExtResource("8_kxcv4")

[node name="Bat" parent="." instance=ExtResource("9_kxcv4")]
visible = false
position = Vector2(553, 292)

[node name="OtherWarnings" type="Label" parent="."]
visible = false
offset_left = 315.0
offset_top = 275.0
offset_right = 822.0
offset_bottom = 339.0
text = "Warning"
label_settings = SubResource("LabelSettings_330b6")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="area_entered" from="0" to="." method="_on_0_area_entered"]
[connection signal="area_exited" from="0" to="." method="_on_area_exited"]
[connection signal="area_entered" from="1" to="." method="_on_1_area_entered"]
[connection signal="area_exited" from="1" to="." method="_on_area_exited"]
[connection signal="area_entered" from="2" to="." method="_on_2_area_entered"]
[connection signal="area_exited" from="2" to="." method="_on_area_exited"]
